// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`generate (rule type) displays the type when type column is enabled 1`] = `
"# eslint-plugin-test

Description.

## Rules
<!-- begin auto-generated rules list -->

🗂️ The type of rule.\\
❗ Identifies problems that could cause errors or unexpected behavior.\\
📖 Identifies potential improvements.\\
📏 Focuses on code formatting.

| Name                           | 🗂️ |
| :----------------------------- | :-- |
| [no-bar](docs/rules/no-bar.md) | 📖  |
| [no-biz](docs/rules/no-biz.md) | 📏  |
| [no-boz](docs/rules/no-boz.md) |     |
| [no-buz](docs/rules/no-buz.md) |     |
| [no-foo](docs/rules/no-foo.md) | ❗   |

<!-- end auto-generated rules list -->
more content.
"
`;

exports[`generate (rule type) displays the type when type column is enabled 2`] = `
"# test/no-foo

💼 This rule is enabled in the ✅ \`recommended\` config.

📝 Description of no-foo.

<!-- end auto-generated rule header -->
## Rule details

details

## Options

optionToDoSomething1 - explanation
optionToDoSomething2 - explanation
"
`;

exports[`generate (rule type) displays the type when type column is enabled 3`] = `
"# test/no-bar

💼 This rule is enabled in the ✅ \`recommended\` config.

📝 Description of no-bar.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (rule type) displays the type when type column is enabled 4`] = `
"# test/no-biz

📝 Description of no-biz.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (rule type) displays the type when type column is enabled 5`] = `
"# test/no-boz

📝 Description of no-boz.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (rule type) displays the type when type column is enabled 6`] = `
"# test/no-buz

📝 Description of no-buz.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (rule type) hides the type column when not enabled 1`] = `
"# eslint-plugin-test

Description.

## Rules
<!-- begin auto-generated rules list -->

💼 Configurations enabled in.\\
✅ Set in the \`recommended\` configuration.

| Name                           | Description            | 💼 |
| :----------------------------- | :--------------------- | :- |
| [no-bar](docs/rules/no-bar.md) | Description of no-bar. | ✅  |
| [no-biz](docs/rules/no-biz.md) | Description of no-biz. |    |
| [no-boz](docs/rules/no-boz.md) | Description of no-boz. |    |
| [no-buz](docs/rules/no-buz.md) | Description of no-buz. |    |
| [no-foo](docs/rules/no-foo.md) | Description of no-foo. | ✅  |

<!-- end auto-generated rules list -->
more content.
"
`;

exports[`generate (rule type) hides the type column when not enabled 2`] = `
"# test/no-foo

💼 This rule is enabled in the ✅ \`recommended\` config.

📝 Description of no-foo.

<!-- end auto-generated rule header -->
## Rule details

details

## Options

optionToDoSomething1 - explanation
optionToDoSomething2 - explanation
"
`;

exports[`generate (rule type) hides the type column when only unknown types exist 1`] = `
"# eslint-plugin-test

Description.

## Rules
<!-- begin auto-generated rules list -->

| Name                           |
| :----------------------------- |
| [no-foo](docs/rules/no-foo.md) |

<!-- end auto-generated rules list -->
more content.
"
`;

exports[`generate (rule type) hides the type column when only unknown types exist 2`] = `
"# test/no-foo

📝 Description.

<!-- end auto-generated rule header -->
## Rule details

details

## Options

optionToDoSomething1 - explanation
optionToDoSomething2 - explanation
"
`;
